@@ -1,3 +1,7 @@
+2001-11-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc: Add FILTER_OUTGOING.
+
 2001-11-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda.spec: Raise version number to 0.41.
